# CMakeDemo

./: .gitmodules  CMakeDemoConfig.h.in  CMakeLists.txt  main.cpp  run.sh
SomeLibDemo/: CMakeLists.txt  adder.h
SomeLibDemo/cpp/: CMakeLists.txt  adder.cpp
